--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-graph-definition-generator",
-  "version": "1.0.10",
+  "version": "1.0.12",
   "description": "This package simplifies the process of building an apollo graphql schemas",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,7 @@
     "lodash.capitalize": "^4.2.1",
     "lodash.pick": "^4.4.0",
     "lodash.set": "^4.3.2",
+    "lodash.snakecase": "^4.1.1",
     "lodash.transform": "^4.6.0",
     "lodash.upperfirst": "^4.3.1"
   },
